@@ -424,29 +424,16 @@ class FFmpegWorker(Worker):
 
         self.video_opts = [
             ('-vcodec', 'libx264'),
+            ('-pix_fmt', pix_fmt),
+            ('-profile:v', 'main'),
+            ('-preset', 'faster'),
+            ('-level', '3.0'),
             ('-b:v', '%sk' % bitrate),
+            ('-x264opts', 'vbv-bufsize=%d:partitions=i8x8,i4x4' % bitrate),
             ('-bf', 3),
             ('-b_strategy', 1),
-            ('-g', 125),
-            ('-coder', 1),
-            ('-flags', '+loop'),
-            ('-me_method', 'hex'),
-            ('-cmp', '+chroma'),
-            ('-subq', 5),
-            ('-me_range', 16),
             ('-keyint_min', 25),
-            ('-sc_threshold', 40),
-            ('-i_qfactor', 0.71),
-            ('-qcomp', 0.6),
-            ('-qmin', 10),
-            ('-qmax', 51),
-            ('-qdiff', 4),
-            ('-direct-pred', 1),
-            ('-fast-pskip', 1),
-            ('-trellis', 0),
-            ('-refs', 1),
-            ('-x264opts', 'partitions=i8x8,i4x4'),
-            ('-pix_fmt', pix_fmt),
+            ('-g', 125),
         ]
 
         if avinfo.video_has_vbi:
